tests/ui/feature-gates/feature-gate-allocator_internals.rs
#![default_lib_allocator] //~ ERROR: attribute is an experimental feature

fn main() {}
